data/derived/comb/progs/unify/prog2870.ml.out
Characters 51-52:
  |h::t -> h :: l listReverse t
                ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
